--- a/styles.css
+++ b/styles.css
@@ -1748,6 +1748,11 @@ transition: color 0.3s ease-in-out;
     border-bottom: 4px solid rgba(143, 3, 113, 0.698);
     margin-top: 2rem;
 }
+@media screen and (max-width: 800px){
+    .column {
+        flex-direction: column;
+    }
+}
 @media screen and (max-width: 820px) {
     .weather-container {
         flex-direction: column;
@@ -1953,11 +1958,17 @@ transition: color 0.3s ease-in-out;
     
   }
   @media screen and (max-width: 800px){
-    .column {
+    .footer {
         flex-direction: column;
     }
+ 
   }
-
+@media screen and (max-width: 800px) {
+    .jeet-icons {
+        align-items: center;
+        text-align: center;
+    }
+}
 
  
 
